<resources>
    <string name="app_name">i211203</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- Common -->
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="remove">Remove</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow_back">Follow Back</string>
    
    <!-- Empty states -->
    <string name="no_followers_yet">No followers yet</string>
    <string name="followers_will_appear_here">When someone follows you, they\'ll appear here.</string>
    <string name="no_following_yet">Not following anyone</string>
    <string name="following_will_appear_here">People you follow will appear here.</string>
</resources>